# parprog

./: README.md  integral.c
cellheat/py_exp/: test.py
convection/: build.sh  conv.c  convection.c  convention  job.sh  job2.sh
euler/: euler.c
omp/: CMakeLists.txt  README.md  ph.cpp  radix_batcher_sort.cpp  radix_batcher_sort.h
omp/bugged/: CMakeLists.txt  a.out  bugged1.c  bugged2.c  bugged3.c  bugged4.c  bugged5.c  bugged6.c
omp/example/: CMakeLists.txt  example.cpp
omp/exp/: CMakeLists.txt  exp.cpp
omp/heat/: CMakeLists.txt  heat.cpp
omp/hello/: CMakeLists.txt  hello  hello.cpp
omp/matmul/: CMakeLists.txt  matmul.cpp
omp/qsort/: CMakeLists.txt  qsort.cpp
omp/scripts/: colormap.py
omp/simples/: CMakeLists.txt  simples.cpp
omp/sum/: CMakeLists.txt  sum.cpp
omp/vecproc/: CMakeLists.txt  vecproc.cpp
sort/: a.out  sample.cpp  sort.c
